--- a/src/row.css
+++ b/src/row.css
@@ -1,3 +1,8 @@
+.row {
+    color: white;
+    margin-left: 20px;
+}
+
 .row__poster {
     object-fit: contain;
     width: 100%;
@@ -22,3 +27,10 @@
     display: none;
 }
 
+.row__posterLarge {
+    max-height: 250px;
+}
+
+.row__posterLarge:hover {
+    transform: scale(1.09);
+}
